FIX: Index too low

--- a/sass/export/components.scss
+++ b/sass/export/components.scss
@@ -84,7 +84,7 @@ div.scrollbox.no-y
     font-size: 1rem;
     padding: 2rem;
     float: right;
-    margin: 1rem 0rem 1rem 3rem;
+    margin: 0rem 0rem 1rem 3rem;
     min-width: 20rem;
 }
 
@@ -95,7 +95,7 @@ div.scrollbox.no-y
         font-size: 1rem;
         padding: 2rem;
         float: none;
-        margin: 1rem 0rem 1rem 0rem;
+        margin: 0rem 0rem 1rem 0rem;
         max-width: 100%;
     }
 }
